Fixed Code Smell